[gd_scene load_steps=16 format=3 uid="uid://iloyho4cn0ja"]

[ext_resource type="Script" uid="uid://cdt6pmge1gs5g" path="res://scripts/options.gd" id="1_yjkok"]
[ext_resource type="Texture2D" uid="uid://cxcthwch4kpcg" path="res://art/Pareido Background.png" id="2_o7i7e"]
[ext_resource type="Texture2D" uid="uid://8ns70xk4ruk5" path="res://art/ui/cancel.png" id="3_kv8mn"]
[ext_resource type="Theme" uid="uid://cmd4o7svexfeo" path="res://themes/main_button_theme.tres" id="3_o7i7e"]
[ext_resource type="Texture2D" uid="uid://nge2rkkgywwm" path="res://art/ui/accept.png" id="4_1sggn"]
[ext_resource type="Texture2D" uid="uid://dnm4iiomorba7" path="res://art/ui/options.png" id="4_e6vpq"]
[ext_resource type="Theme" uid="uid://cemlxn27frmx0" path="res://themes/theme.tres" id="8_85aq5"]
[ext_resource type="Theme" uid="uid://jkb3xqa4m2gt" path="res://themes/option_button_theme.tres" id="8_uon5e"]
[ext_resource type="Script" uid="uid://b1r8bk40gvfcx" path="res://scripts/RichTextLabelTranslate.gd" id="9_85aq5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uon5e"]
bg_color = Color(0.270588, 0.301961, 0.411765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5hix"]
bg_color = Color(0.129412, 0.658824, 0.890196, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o7i7e"]
bg_color = Color(0.921569, 0.768627, 0.0117647, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85aq5"]
bg_color = Color(0.270588, 0.301961, 0.411765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyu1t"]
bg_color = Color(0.270588, 0.301961, 0.411765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gycth"]
bg_color = Color(0.548982, 0.588633, 0.721011, 1)

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjkok")

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
scale = Vector2(0.845, 0.845)
texture = ExtResource("2_o7i7e")
centered = false

[node name="Tree" type="Tree" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 430.0
offset_bottom = 530.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uon5e")
hide_root = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 550.0
offset_right = 1130.0
offset_bottom = 620.0
alignment = 1

[node name="ExitButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
focus_mode = 0
theme = ExtResource("8_uon5e")
theme_override_styles/normal = SubResource("StyleBoxFlat_g5hix")
icon_alignment = 1
expand_icon = true

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="HBoxContainer/ExitButton/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/ExitButton/CenterContainer/Control"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_kv8mn")

[node name="LanguageButton" type="Button" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
text = "Language"

[node name="OptionsButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
focus_mode = 0
theme = ExtResource("8_uon5e")
theme_override_styles/normal = SubResource("StyleBoxFlat_g5hix")
icon_alignment = 1
expand_icon = true

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/OptionsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="HBoxContainer/OptionsButton/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/OptionsButton/CenterContainer/Control"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_e6vpq")

[node name="AcceptButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
focus_mode = 0
theme = ExtResource("8_uon5e")
theme_override_styles/normal = SubResource("StyleBoxFlat_g5hix")
icon_alignment = 1
expand_icon = true

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/AcceptButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="HBoxContainer/AcceptButton/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/AcceptButton/CenterContainer/Control"]
scale = Vector2(0.17, 0.17)
texture = ExtResource("4_1sggn")

[node name="AcceptButtonOld" type="Button" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
theme = ExtResource("3_o7i7e")
text = "
"
icon = ExtResource("4_1sggn")
icon_alignment = 1
expand_icon = true

[node name="PlayButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
theme = ExtResource("3_o7i7e")
theme_override_colors/font_hover_pressed_color = Color(0.921569, 0.768627, 0.0117647, 1)
theme_override_colors/font_hover_color = Color(0.921569, 0.768627, 0.0117647, 1)
theme_override_colors/font_color = Color(0.0862745, 0.129412, 0.266667, 1)
theme_override_colors/font_pressed_color = Color(0.921569, 0.768627, 0.0117647, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_o7i7e")
text = "tr_start"
icon_alignment = 1
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 435.0
offset_top = 30.0
offset_right = 1115.0
offset_bottom = 530.0

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_85aq5")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gyu1t")
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="PicGridContainer" type="GridContainer" parent="VBoxContainer/Panel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("8_uon5e")
columns = 2

[node name="TopHelpRichTextLabel" type="RichTextLabel" parent="VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 667.0
offset_bottom = 138.0
theme = ExtResource("8_85aq5")
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "ü†ê tr_helptop1_
tr_helptop2_
[color=#ebc403]tr_doubleclick_[/color] tr_helptop3_"
script = ExtResource("9_85aq5")

[node name="CenterHelpRichTextLabel" type="RichTextLabel" parent="VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.5
offset_top = -74.5
offset_right = 268.5
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_85aq5")
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "tr_helpmid1_
tr_helpmid2_
tr_helpmid3_
tr_helpmid4_
[color=#21a8e3][url={https://github.com/Dawn395/Pareido}]tr_contact_[/url][/color]!"
script = ExtResource("9_85aq5")

[node name="BottomHelpRichTextLabel" type="RichTextLabel" parent="VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -606.0
offset_top = -119.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("8_85aq5")
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "tr_helpbottom1_
tr_helpbottom2_  ‚Ü¥    ü†É"
horizontal_alignment = 2
vertical_alignment = 2
script = ExtResource("9_85aq5")

[node name="TestRichTextLabel2" type="RichTextLabel" parent="VBoxContainer/Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.0
offset_top = 77.0
offset_right = 268.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_85aq5")
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "test tr_potato_ test"
script = ExtResource("9_85aq5")

[node name="TopHelpLabel" type="Label" parent="VBoxContainer/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 651.0
offset_bottom = 141.0
theme = ExtResource("8_85aq5")
text = "ü†ê Select a folder on the left side
to choose which pictures you want to play with.
Doubleclick to select/deselect everything in a folder at once"

[node name="CenterHelpLabel" type="Label" parent="VBoxContainer/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.5
offset_top = -91.5
offset_right = 262.5
offset_bottom = 91.5
grow_horizontal = 2
grow_vertical = 2
text = "If you start this game as an Admin on PC, 
there is a folder-link where you can 
change the pictures and include your own.
If you want to share your pictures with everyone,
[url={https://github.com/Dawn395/Pareido}{hello}[/url]"

[node name="BottomHelpLabel" type="Label" parent="VBoxContainer/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -525.0
offset_top = -79.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "this is how many different pictures are selected
how many different pictures are used ‚Ü¥   ü†É"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="VarietiesHSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 2.0
max_value = 20.0
value = 8.0

[node name="VarietiesLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "6"
horizontal_alignment = 2

[node name="SlashLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " / "
horizontal_alignment = 2

[node name="TotalLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "20"
horizontal_alignment = 2

[node name="OptionsPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -175.0
offset_right = 400.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gycth")

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OptionLabel" type="Label" parent="OptionsPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "tr_options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LanguageOptionButton" type="OptionButton" parent="OptionsPanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
theme = ExtResource("8_uon5e")
alignment = 1

[node name="Label" type="Label" parent="OptionsPanel/HBoxContainer/VBoxContainer/LanguageOptionButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -14.0
offset_right = 40.0
offset_bottom = 14.0
grow_vertical = 2
text = "tr_language_selection"

[node name="RoundsButton" type="Button" parent="OptionsPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("8_uon5e")
toggle_mode = true
text = " "
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsPanel/HBoxContainer/VBoxContainer/RoundsButton"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="OptionsPanel/HBoxContainer/VBoxContainer/RoundsButton/HBoxContainer"]
layout_mode = 2
text = "  Rounds   "

[node name="RoundsHSlider" type="HSlider" parent="OptionsPanel/HBoxContainer/VBoxContainer/RoundsButton/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 10.0
value = 3.0
rounded = true

[node name="RoundsLabel" type="Label" parent="OptionsPanel/HBoxContainer/VBoxContainer/RoundsButton/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "  5  "

[node name="PictureTypeButton" type="Button" parent="OptionsPanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_o7i7e")
icon_alignment = 1
expand_icon = true

[node name="TrueRandomCheckBox" type="CheckBox" parent="OptionsPanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_o7i7e")
text = "tr_true_random"

[node name="RandomizeCheckBox" type="CheckBox" parent="OptionsPanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_o7i7e")
text = "tr_randomize_pics"

[node name="ShakePicsCheckBox" type="CheckBox" parent="OptionsPanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_o7i7e")
text = "tr_shake_pics"

[node name="ResetPopupButton" type="Button" parent="OptionsPanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_o7i7e")
text = "tr_reset_startbox"
icon_alignment = 1
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="OptionsPanel/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[connection signal="item_edited" from="Tree" to="." method="_on_tree_item_edited"]
[connection signal="pressed" from="HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/LanguageButton" to="." method="_on_language_button_pressed"]
[connection signal="pressed" from="HBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AcceptButtonOld" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="meta_clicked" from="VBoxContainer/Panel/CenterHelpRichTextLabel" to="." method="_on_center_help_rich_text_label_meta_clicked"]
[connection signal="meta_clicked" from="VBoxContainer/Panel/TestRichTextLabel2" to="." method="_on_center_help_rich_text_label_meta_clicked"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VarietiesHSlider" to="." method="_on_varieties_h_slider_value_changed"]
[connection signal="item_selected" from="OptionsPanel/HBoxContainer/VBoxContainer/LanguageOptionButton" to="." method="_on_language_option_button_item_selected"]
[connection signal="value_changed" from="OptionsPanel/HBoxContainer/VBoxContainer/RoundsButton/HBoxContainer/RoundsHSlider" to="." method="_on_rounds_h_slider_value_changed"]
[connection signal="pressed" from="OptionsPanel/HBoxContainer/VBoxContainer/PictureTypeButton" to="." method="_on_picture_type_button_pressed"]
[connection signal="toggled" from="OptionsPanel/HBoxContainer/VBoxContainer/TrueRandomCheckBox" to="." method="_on_true_random_check_box_toggled"]
[connection signal="toggled" from="OptionsPanel/HBoxContainer/VBoxContainer/RandomizeCheckBox" to="." method="_on_randomize_check_box_toggled"]
[connection signal="toggled" from="OptionsPanel/HBoxContainer/VBoxContainer/ShakePicsCheckBox" to="." method="_on_shake_check_box_toggled"]
[connection signal="pressed" from="OptionsPanel/HBoxContainer/VBoxContainer/ResetPopupButton" to="." method="_on_reset_popup_button_pressed"]
